# test-project

./: README.md  flow.mmd  main.py  pyproject.toml  script.sh  script2.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: issue-comment.yml  python-app.yml
tests/: test_main.py
