[metadata]
# replace with your username:
name = test-project
version = 1.0.0
description = Handles validating data product spec

[options]
packages = find:
python_requires = >=3.8


[options.extras_require]
test =
    pytest==6.2.5
    black==22.3.0
    flake8==3.9.2
    isort==5.9.2
    click==8.1.2

[options.packages.find]
exclude = ./tests*

[options.package_data]
* = */*/*.json, */*/*.yaml, */*/*/*.jinja, */*.ini
